--- a/XSLT/ex1opmy.html
+++ b/XSLT/ex1opmy.html
@@ -15,27 +15,37 @@
          <tr>
             <td>username1</td>
             <td>First1</td>
-            <td>title1</td>
+            <td></td>
+            <td></td>
+            <td></td>
          </tr>
          <tr>
             <td>username2</td>
             <td>First2</td>
-            <td>title2</td>
+            <td></td>
+            <td></td>
+            <td></td>
          </tr>
          <tr>
             <td>username3</td>
             <td>First3</td>
-            <td>title3 title4 title5</td>
+            <td></td>
+            <td></td>
+            <td></td>
          </tr>
          <tr>
             <td>username4</td>
             <td>First4</td>
-            <td></td>
+            <td>title1 title2</td>
+            <td>1234</td>
+            <td>comment1 comment2 comment3 comment4</td>
          </tr>
          <tr>
             <td>username5</td>
             <td>First5</td>
-            <td></td>
+            <td>title3</td>
+            <td>56</td>
+            <td>comment5 comment6</td>
          </tr>
       </table>
    </body>
