--- a/XSLT/results_xsl.html
+++ b/XSLT/results_xsl.html
@@ -8,42 +8,36 @@
          <tr>
             <th>UserName</th>
             <th>FirstName</th>
+            <th>PostId</th>
             <th>PostTitle</th>
-            <th>CommentId</th>
-            <th>CommentContent</th>
          </tr>
          <tr>
             <td>username1</td>
             <td>First1</td>
+            <td>1</td>
             <td>title1</td>
-            <td>1 2</td>
-            <td></td>
          </tr>
          <tr>
             <td>username2</td>
             <td>First2</td>
+            <td>2</td>
             <td>title2</td>
-            <td>3 4</td>
-            <td></td>
          </tr>
          <tr>
             <td>username3</td>
             <td>First3</td>
+            <td>3 4 5</td>
             <td>title3 title4 title5</td>
-            <td>5 6</td>
-            <td></td>
          </tr>
          <tr>
             <td>username4</td>
             <td>First4</td>
             <td></td>
             <td></td>
-            <td></td>
          </tr>
          <tr>
             <td>username5</td>
             <td>First5</td>
-            <td></td>
             <td></td>
             <td></td>
          </tr>
